# mdss-star

./: .clang-tidy  .gitignore  README.md
decoder/: .gitignore  main.cpp
infrastructure/: .gitignore
infrastructure/ansible/: .gitignore  aws_ec2.yml  benchmark-decoder.yml  cleanup.sh  finish.sh  install-dependencies.yml  install-gmp.yml  install-google-benchmark.yml  install-ntl.yml  run.sh  run_benchmark.service  setup-protocol-benchmark.yml
infrastructure/pulumi/: __main__.py
instance_generation/: .gitignore  instance_generation.sage
parameter_calculator/: .gitignore  Makefile  gen_subsamples.sage  instance_generator.sage  ladder_calculator.sage  leakage_calculator.sage  main.sage  popstar_simulator.sage  utils.sage
protocol/: CMakeLists.txt  README.md
protocol/bench/: CMakeLists.txt  decryption.cpp  obliv_poly_eval.cpp  obliv_share_sample.cpp
protocol/cmake/: FindPML.cmake
protocol/src/: CMakeLists.txt
protocol/src/secureagg/: encryption.cpp  encryption.h  obliv_share_sample.cpp  obliv_share_sample.h
protocol/test/: CMakeLists.txt  encryption.cpp  protocol.cpp
